# meridian-dns

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLA.md  CLAUDE.md  CMakeLists.txt  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.roo/: settings.local.json
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BUILD_ENVIRONMENT.md  CODE_STANDARDS.md  CONFIGURATION.md  CUSTOM_THEMES.md  DEPLOYMENT.md  DESIGN.md  GITOPS.md  PERMISSIONS.md  TUI_DESIGN.md  VERSIONING.md  openapi.yaml
docs/internal/: BACKLOG_1.2.md  RELEASE.md
docs/plans/: 2026-02-28-documentation-restructure-design.md  2026-02-28-phase-3-5-crow-migration.md  2026-02-28-phase-4-authentication.md  2026-02-28-project-framing-design.md  2026-03-04-phase-5-dal-core-repositories.md  2026-03-04-phase-6-powerdns-provider-core-engines.md  2026-03-05-phase-7-deployment-pipeline-gitops.md  2026-03-05-phase-8-api-hardening-docker.md  2026-03-05-rename-meridian-dns.md  2026-03-06-migrations-and-setup-wizard-design.md  2026-03-06-v0.9.3-zone-management.md  2026-03-07-cloudflare-auto-ttl-and-variable-display.md  2026-03-07-v0.9.7-design.md  2026-03-08-v1.0-design.md  2026-03-09-workstream-1-ui-visual-overhaul.md  2026-03-09-workstream-2-config-migration-to-db.md  2026-03-13-admin-reorganization-design.md  2026-03-13-group-role-restructure-design.md  2026-03-13-workstream-4-oidc-saml-auth.md  2026-03-13-workstream-5-multi-repo-gitops.md  2026-03-14-liboauth2-lasso-auth-refactor.md  2026-03-14-workstream-6-config-backup-restore.md  2026-03-15-pre-release-polish.impl.md  2026-03-15-pre-release-polish.md  2026-03-15-workstream-7-zone-initial-snapshot.md  2026-03-15-workstream-8-release-preparation.md  2026-03-17-code-review-remediation.md  2026-03-18-v1.1-design.md  2026-03-19-v1.1-group1-templates-snippets.md  2026-03-20-v1.1-group2-dynamic-variables.md  2026-03-20-v1.1-group3-qol.md  SECURITY_PLAN.md  (+8 more)
scripts/: check-license-headers.sh
src/: CMakeLists.txt  main.cpp
src/api/: ApiServer.cpp  AuthMiddleware.cpp  RateLimiter.cpp  RequestValidator.cpp  RouteHelpers.cpp  StaticFileHandler.cpp
src/api/routes/: ApiKeyRoutes.cpp  AuditRoutes.cpp  AuthRoutes.cpp  BackupRoutes.cpp  DeploymentRoutes.cpp  GitRepoRoutes.cpp  GroupRoutes.cpp  HealthRoutes.cpp  IdpRoutes.cpp  OidcRoutes.cpp  PreferenceRoutes.cpp  ProviderDefinitionRoutes.cpp  ProviderRoutes.cpp  RecordRoutes.cpp  RoleRoutes.cpp  SamlRoutes.cpp  SearchRoutes.cpp  SettingsRoutes.cpp  SetupRoutes.cpp  SnippetRoutes.cpp  SoaPresetRoutes.cpp  SystemLogRoutes.cpp  TagRoutes.cpp  ThemeRoutes.cpp  UserRoutes.cpp  VariableRoutes.cpp  ViewRoutes.cpp  ZoneRoutes.cpp  ZoneTemplateRoutes.cpp
src/common/: Config.cpp  Logger.cpp  TimeUtils.cpp
src/core/: BackupService.cpp  BindExporter.cpp  DeploymentEngine.cpp  DiffEngine.cpp  MaintenanceScheduler.cpp  PermissionService.cpp  RecordValidator.cpp  RollbackEngine.cpp  TemplateEngine.cpp  ThreadPool.cpp  VariableEngine.cpp
src/dal/: ApiKeyRepository.cpp  AuditRepository.cpp  ConnectionPool.cpp  DeploymentRepository.cpp  GitRepoRepository.cpp  GroupRepository.cpp  IdpRepository.cpp  MigrationRunner.cpp  ProviderDefinitionRepository.cpp  ProviderRepository.cpp  RecordRepository.cpp  RoleRepository.cpp  SessionRepository.cpp  SettingsRepository.cpp  SnippetRepository.cpp  SoaPresetRepository.cpp  SystemConfigRepository.cpp  SystemLogRepository.cpp  TagRepository.cpp  UserPreferenceRepository.cpp  UserRepository.cpp  VariableRepository.cpp  ViewRepository.cpp  ZoneRepository.cpp  ZoneTemplateRepository.cpp
src/gitops/: GitOpsMigration.cpp  GitOpsMirror.cpp  GitRepoManager.cpp  GitRepoMirror.cpp
src/providers/: AdGuardHomeProvider.cpp  CloudflareProvider.cpp  DigitalOceanProvider.cpp  GenericRestProvider.cpp  PowerDnsProvider.cpp  ProviderFactory.cpp  SubprocessProvider.cpp
src/security/: AuthService.cpp  CryptoService.cpp  FederatedAuthService.cpp  HmacJwtSigner.cpp  OidcService.cpp  SamlReplayCache.cpp  SamlService.cpp
tasks/: lessons.md
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: test_adguardhome_provider.cpp  test_api_key_repository.cpp  test_api_validation.cpp  test_audit_repository.cpp  test_auth_middleware.cpp  test_auth_service.cpp  test_backup_restore.cpp  test_config_seeding.cpp  test_connection_pool.cpp  test_crud_routes.cpp  test_deployment_pipeline.cpp  test_deployment_repository.cpp  test_federated_auth.cpp  test_git_repo_manager.cpp  test_git_repo_repository.cpp  test_gitops_migration.cpp  test_gitops_mirror.cpp  test_group_repository.cpp  test_idp_repository.cpp  test_migration_runner.cpp  test_permission_service.cpp  test_provider_repository.cpp  test_record_repository.cpp  test_role_repository.cpp  test_role_routes.cpp  test_rollback_engine.cpp  test_session_repository.cpp  test_settings_repository.cpp  test_settings_routes.cpp  test_setup_routes.cpp  test_snippet_repository.cpp  test_soa_preset_repository.cpp  test_system_log_repository.cpp  test_tag_repository.cpp  test_user_repository.cpp  test_variable_engine_expand.cpp  test_variable_repository.cpp  test_view_repository.cpp  test_zone_capture.cpp  test_zone_repository.cpp  (+1 more)
tests/unit/: test_adguardhome_provider.cpp  test_backup_service.cpp  test_bind_exporter.cpp  test_capture_snapshot.cpp  test_cloudflare_provider.cpp  test_config.cpp  test_crypto_service.cpp  test_deployment_ordering.cpp  test_diff_engine.cpp  test_digitalocean_provider.cpp  test_errors.cpp  test_federated_auth_service.cpp  test_generic_rest_provider.cpp  test_git_repo_mirror.cpp  test_health_routes.cpp  test_hmac_jwt_signer.cpp  test_maintenance_scheduler.cpp  test_oidc_service.cpp  test_powerdns_provider.cpp  test_provider_conformance.cpp  test_provider_factory.cpp  test_rate_limiter.cpp  test_record_validator.cpp  test_request_validator.cpp  test_route_helpers.cpp  test_saml_replay_cache.cpp  test_saml_service.cpp  test_subprocess_provider.cpp  test_system_config_repository.cpp  test_template_engine.cpp  test_thread_pool.cpp  test_types.cpp  test_variable_engine.cpp
ui/: vite.config.ts
(+231 files in other folders)
